<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.chauthai.swipereveallayout.SwipeRevealLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dragEdge="right">

        <TextView
            android:id="@+id/remove_btn"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:background="@color/hiad_emui_functional_red"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/remove"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:text="@string/city_demo_name"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/temperature_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/temp_demo_text"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/weather_status_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginHorizontal="10dp"
                android:baselineAlignBottom="true"
                android:contentDescription="@null"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/wind_status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="9999m/s WWW"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/direction_wind_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@null"
                android:padding="8dp"
                android:src="@drawable/ic_wind_direction" />

        </LinearLayout>
    </com.chauthai.swipereveallayout.SwipeRevealLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray" />
</LinearLayout>