<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/current_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_stamp"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/city_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="4dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
                    tools:text="@string/city_demo_name" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/weather_status_iv"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:baselineAlignBottom="true"
                        android:contentDescription="@null"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/weather_status_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:baselineAlignBottom="true"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:text="@string/weather_demo_name" />
                </LinearLayout>

                <TextView
                    android:id="@+id/temperature_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="20dp"
                    android:baselineAlignBottom="true"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    tools:text="@string/temp_demo_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="10dp">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/wind_status_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:paddingEnd="25dp"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            tools:text="Wind: 2.7m/s NNE" />

                        <ImageView
                            android:id="@+id/direction_wind_iv"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignEnd="@+id/wind_status_tv"
                            android:layout_centerVertical="true"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_wind_direction"
                            android:visibility="gone" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/humidity_status_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        tools:text="Humidity: 92%" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/pressure_status_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        tools:text="Pressure: 1020hPa" />

                    <TextView
                        android:id="@+id/visibility_status_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        tools:text="Visibility: 10.0km" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="10dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/uv_index_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="UV index: 0.0"
                        android:textColor="@color/black"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/dew_point_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="Dew point: 8°C"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/location_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_location_weather_view" />

                <TextView
                    android:id="@+id/add_location_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/background_blue_round_radius"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/add_location"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>