<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/city_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:drawablePadding="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
            tools:text="@string/city_demo_name" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/main_weather_status_iv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:baselineAlignBottom="true"
                android:contentDescription="@null"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/weather_status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAlignBottom="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:text="@string/weather_demo_name" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_temperature_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:baselineAlignBottom="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            tools:text="@string/temp_demo_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingBottom="10dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_wind_status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingEnd="25dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:text="Wind: 2.7m/s NNE" />

                <ImageView
                    android:id="@+id/main_direction_wind_iv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignEnd="@+id/main_wind_status_tv"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_wind_direction"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/humidity_status_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:text="Humidity: 92%" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/pressure_status_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:text="Pressure: 1020hPa" />

            <TextView
                android:id="@+id/visibility_status_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:text="Visibility: 10.0km" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingBottom="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/uv_index_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="UV index: 0.0"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/dew_point_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="Dew point: 8°C"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</layout>